RESOLVED FIXED73459
Web Inspector: Inspect element does not highlight element in elements panel when inspector is opened.
https://bugs.webkit.org/show_bug.cgi?id=73459
Summary Web Inspector: Inspect element does not highlight element in elements panel w...
Vsevolod Vlasov
Reported 2011-11-30 09:47:03 PST
Inspect element does not highlight element in elements panel when inspector is opened. Also it would be great if inspect element did not show the last selected panel before showing elements panel.
Attachments
Patch (7.83 KB, patch)
2011-11-30 10:34 PST, Vsevolod Vlasov
pfeldman: review+
Vsevolod Vlasov
Comment 1 2011-11-30 10:34:29 PST
Vsevolod Vlasov
Comment 2 2011-11-30 10:49:31 PST
Note You need to log in before you can comment on or make changes to this bug.